# handsfree

./: .gitignore  .gitlab-ci.yml  README.md  build.gradle
docs/: design.xd  research.md  technical.md  testing.md  testprotocol.md  usermanual.md
docs/documentation/: research.md  technical.md  testing.md  testprotocol.md  usermanual.md
docs/documentation/classes/: classes.md
docs/documentation/docs/: research.md  technical.md  usermanual.md
docs/documentation/testing/: sprint_1.md  sprint_2.md  sprint_3.md  sprint_4.md
docs/documentation/testprotocol/: sprint_1.md  sprint_2.md  sprint_3.md  sprint_4.md
docs/journals/alain/: 2021-04-19.md  2021-04-20.md  2021-04-21.md  2021-04-22.md  2021-04-23.md  2021-04-28.md  2021-04-29.md  2021-04-30.md  2021-05-05.md  2021-05-06.md  2021-05-07.md  2021-05-12.md  2021-05-19.md  2021-05-20.md  2021-05-21.md  2021-05-26.md  2021-05-27.md  2021-05-28.md
docs/journals/marino/: 2021-04-19.md  2021-04-20.md  (+16 more)
handsfree/: .gitignore  build.gradle  settings.gradle
handsfree/application/: build.gradle
handsfree/common/: build.gradle
handsfree/installer/: build.gradle
handsfree/uninstaller/: build.gradle  handsfree.manifest
installer/: build.gradle
robot_jni/: CMakeLists.txt  robot.cpp  robot.h
tobii_jni/: .gitignore  CMakeLists.txt  msvc_compile.bat  tobii_device.h
tobii_jni/cpp/tobii_jni/: compile.bat  compile.txt  non_copyable.h  tobii_api.cpp  tobii_api.exp  tobii_api.h  tobii_api.lib  tobii_device.cpp  tobii_device.h  tobii_jni.cpp  tobii_jni.h  tobii_jni_stream_engine.exp  tobii_jni_stream_engine.lib
(+236 files in other folders)
